; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__ignored_directory.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__ignored_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"stash/ignored_directory\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"stash/ignored_directory/sub\00", align 1
@.str.2 = private unnamed_addr constant [38 x i8] c"stash/ignored_directory/sub/some_file\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"stuff\00", align 1
@repo = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [32 x i8] c"ignored_directory/sub/some_file\00", align 1
@GIT_STATUS_WT_NEW = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [19 x i8] c"ignored_directory/\00", align 1
@GIT_STATUS_IGNORED = common dso_local global i32 0, align 4
@stash_tip_oid = common dso_local global i32 0, align 4
@signature = common dso_local global i32 0, align 4
@GIT_STASH_INCLUDE_UNTRACKED = common dso_local global i32 0, align 4
@GIT_STASH_INCLUDE_IGNORED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_save__ignored_directory() #0 {
  %1 = call i32 @p_mkdir(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 511)
  %2 = call i32 @cl_git_pass(i32 %1)
  %3 = call i32 @p_mkdir(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 511)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  %6 = load i32, i32* @repo, align 4
  %7 = load i32, i32* @GIT_STATUS_WT_NEW, align 4
  %8 = call i32 @assert_status(i32 %6, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @repo, align 4
  %10 = call i32 @git_ignore_add_rule(i32 %9, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.5, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32, i32* @repo, align 4
  %13 = load i32, i32* @GIT_STATUS_IGNORED, align 4
  %14 = call i32 @assert_status(i32 %12, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @repo, align 4
  %16 = load i32, i32* @signature, align 4
  %17 = load i32, i32* @GIT_STASH_INCLUDE_UNTRACKED, align 4
  %18 = load i32, i32* @GIT_STASH_INCLUDE_IGNORED, align 4
  %19 = or i32 %17, %18
  %20 = call i32 @git_stash_save(i32* @stash_tip_oid, i32 %15, i32 %16, i32* null, i32 %19)
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = call i32 @git_path_exists(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0))
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  %26 = call i32 @cl_assert(i32 %25)
  %27 = call i32 @git_path_exists(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  %31 = call i32 @cl_assert(i32 %30)
  %32 = call i32 @git_path_exists(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %33 = icmp ne i32 %32, 0
  %34 = xor i1 %33, true
  %35 = zext i1 %34 to i32
  %36 = call i32 @cl_assert(i32 %35)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @p_mkdir(i8*, i32) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @assert_status(i32, i8*, i32) #1

declare dso_local i32 @git_ignore_add_rule(i32, i8*) #1

declare dso_local i32 @git_stash_save(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_path_exists(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
